# slack-status

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.go  pyproject.toml  tox.ini
.github/workflows/: main.yml
slackstatus/: __main__.py  api.py  cli.py  util.py
tests/: test_api.py  test_cli.py  test_parse_duration.py
